# score-addon-orbbec

./: .gitmodules  CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_orbbec.cpp  score_addon_orbbec.hpp
Orbbec/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  Device.cpp  Device.hpp  OrbbecInputDevice.cpp  OrbbecInputDevice.hpp  OrbbecInputStream.cpp  OrbbecInputStream.hpp  OrbbecProtocol.cpp  OrbbecProtocol.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp
